--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "introduce",
   "version": "0.1.0",
+  "homepage": "https://wmjSymfony.github.io/introduce",
   "private": true,
   "dependencies": {
     "antd": "^3.19.8",
     "jquery": "^3.4.1",
+    "rc-queue-anim": "^1.6.12",
+    "rc-texty": "^0.2.0",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
@@ -15,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
