--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://wmjSymfony.github.io/introduce",
   "private": true,
   "dependencies": {
-    "antd": "^3.19.8",
+    "antd": "^3.20.0",
     "jquery": "^3.4.1",
     "rc-queue-anim": "^1.6.12",
     "rc-texty": "^0.2.0",
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
